{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 174,
  "lineage": "20b7449f-b317-5aff-ea0e-a68f8376361d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb653ca2d3203ac1",
            "arn": "arn:aws:ec2:us-east-2:145373032156:instance/i-06036d38d4be9aeda",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06036d38d4be9aeda",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05903ba1e009a2b30",
            "private_dns": "ip-172-31-45-225.us-east-2.compute.internal",
            "private_ip": "172.31.45.225",
            "public_dns": "ec2-18-118-212-174.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.212.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0222adcc109fb762b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default-egress-tls-example",
              "default-ping-example",
              "default-ssh-example",
              "default-web-example",
              "default-web_server-example"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04333ed91cc4e66e9",
            "tags": {
              "Name": "nginx-server-1"
            },
            "tags_all": {
              "Name": "nginx-server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0094643500e351065",
              "sg-00dde57277fd8d879",
              "sg-01beaeb90406c726d",
              "sg-0e0c8db61ed18a5e0",
              "sg-0ee509663590df8d3"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo_key",
            "aws_security_group.egress-tls",
            "aws_security_group.ping-ICMP",
            "aws_security_group.ssh",
            "aws_security_group.web",
            "aws_security_group.web_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress-tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145373032156:security-group/sg-0e0c8db61ed18a5e0",
            "description": "Default security group that allows inbound and outbound traffic from all instances in the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0c8db61ed18a5e0",
            "ingress": [],
            "name": "default-egress-tls-example",
            "name_prefix": "",
            "owner_id": "145373032156",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "egress-tls-example-default-vpc"
            },
            "tags_all": {
              "Name": "egress-tls-example-default-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e23b14bf1e710501"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ping-ICMP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145373032156:security-group/sg-0ee509663590df8d3",
            "description": "Default security group that allows to ping the instance",
            "egress": [],
            "id": "sg-0ee509663590df8d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "default-ping-example",
            "name_prefix": "",
            "owner_id": "145373032156",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ping-ICMP-example-default-vpc"
            },
            "tags_all": {
              "Name": "ping-ICMP-example-default-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e23b14bf1e710501"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145373032156:security-group/sg-0094643500e351065",
            "description": "Security group for nat instances that allows SSH and VPN traffic from internet",
            "egress": [],
            "id": "sg-0094643500e351065",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-ssh-example",
            "name_prefix": "",
            "owner_id": "145373032156",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-example-default-vpc"
            },
            "tags_all": {
              "Name": "ssh-example-default-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e23b14bf1e710501"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145373032156:security-group/sg-00dde57277fd8d879",
            "description": "Security group for web that allows web traffic from internet",
            "egress": [],
            "id": "sg-00dde57277fd8d879",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default-web-example",
            "name_prefix": "",
            "owner_id": "145373032156",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-example-default-vpc"
            },
            "tags_all": {
              "Name": "web-example-default-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e23b14bf1e710501"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145373032156:security-group/sg-01beaeb90406c726d",
            "description": "Default security group that allows to use port 8080",
            "egress": [],
            "id": "sg-01beaeb90406c726d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "default-web_server-example",
            "name_prefix": "",
            "owner_id": "145373032156",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_server-example-default-vpc"
            },
            "tags_all": {
              "Name": "web_server-example-default-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e23b14bf1e710501"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}